<resources>
    <!-- Main activity -->
    <string name="app_name">DisasterAlert</string>
    <string name="action_settings">Settings</string>
    <string name="main_disaster_map">Disaster Map</string>
    <string name="main_report">Make a Report</string>
    <string name="main_donate">Donate</string>
    <string name="main_live_feed">Live Feed</string>
    <string name="main_loved_ones">Loved Ones</string>
    <string name="main_info">Survival Guide</string>
    <string name="title_activity_report_creation">File a Report</string>
    <string name="internet">Internet\u0020\u0020</string>
    <string name="cellular">\u0020\u0020Cellular</string>
    <string name="SOS">SOS!</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>

    <!-- Report activity -->
    <string name="submit_report">Submit Report</string>
    <string name="getting_location">Getting Location…</string>
    <string name="hindi">हिन्दी</string>
    <string name="subheading">Tell us what\'s happening around you.</string>
    <string name="reportType">Type of Event:</string>
    <string-array name="maps">
        <item>Flood</item>
        <item>Fire</item>
        <item>Earthquake</item>
        <item>Injury</item>
        <item>Illness</item>
    </string-array>
    <string name="numberPeople">"Number of people affected:"</string>
    <string name="descTitle">"Description:"</string>
    <string name="descHint">"Enter description..."</string>
    <string name="addPhoto">"\u0020\u0020Add a Photo"</string>
    <string name="title_activity_loved_ones">LovedOnesActivity</string>


    <!-- Donate activity -->
    <string name="donateSubheading">"Make a donation to support relief efforts around the country."</string>
    <string name="donateDetailsTitle">"Enter Details:"</string>
    <string name="amountHint">"Amount"</string>
    <string name="upiHint">"UPI id"</string>
    <string name="nameHint">"Name"</string>
    <string name="makePay">Make Payment</string>

    <!--Live Feed -->
    <string name="feedSubheading">"Get the latest updates around you."</string>

    <!--Loved Ones-->
    <string name="lovedOnesButton">"People not seen? Add numbers"</string>
</resources>