<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgappblank"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvDonateHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_donate"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@android:color/white">

        </TextView>
        <TextView
            android:layout_below="@id/tvDonateHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:text="@string/donateSubheading">
        </TextView>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="5dp"
        android:layout_margin="5dp"
        android:layout_below="@id/event_report_heading"
        android:layout_above="@+id/layout_bottom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@drawable/upi"
            android:id="@+id/draw_upi"/>

    <LinearLayout
        android:layout_below="@id/draw_upi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:id="@+id/upi_donations_layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/donateDetailsTitle"
            android:textColor="#000"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:id="@+id/text_donation"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amountHint"
            android:layout_margin="10dp"
            android:id="@+id/value_donation"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/upiHint"
            android:layout_margin="10dp"
            android:id="@+id/upi_id_donation"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nameHint"
            android:layout_margin="10dp"
            android:id="@+id/name_donation"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descHint"
            android:layout_margin="10dp"
            android:id="@+id/note_donation"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/makePay"
            android:background="@drawable/rounded_button"
            android:textColor="@android:color/white"
            android:layout_margin="10dp"
            android:id="@+id/make_donation"/>
    </LinearLayout>
    </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>