<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical">

        <RelativeLayout
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@android:color/white">
            </TextView>

            <LinearLayout
                android:layout_marginTop="24dp"
                android:layout_below="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvInternetStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:text="Internet  "
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_green_dark">
                </TextView>

                <TextView
                    android:id="@+id/tvCellularStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:text="  Cellular"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_green_dark">
                </TextView>
            </LinearLayout>
        </RelativeLayout>
    
        <GridLayout
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:rowCount="3"
            android:columnCount="2"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/disasterMapButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="8dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">
                
                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:src="@drawable/ic_map_24px"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:text="@string/main_disaster_map"
                        android:layout_width="wrap_content"
                        android:textSize="18sp"
                        android:layout_height="wrap_content">

                    </TextView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/reportButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="8dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:src="@drawable/ic_report_problem_24px"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:text="@string/main_report"
                        android:layout_width="wrap_content"
                        android:textSize="18sp"
                        android:layout_height="wrap_content">

                    </TextView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/donateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="8dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:src="@drawable/ic_public_24px"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:text="@string/main_donate"
                        android:layout_width="wrap_content"
                        android:textSize="18sp"
                        android:layout_height="wrap_content">

                    </TextView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/liveFeedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="8dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:src="@drawable/ic_rss_feed_24px"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:text="@string/main_live_feed"
                        android:layout_width="wrap_content"
                        android:textSize="18sp"
                        android:layout_height="wrap_content">

                    </TextView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </GridLayout>

</LinearLayout>